[package]
name = "axiom-sdk-rs-starter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axiom-sdk = "0.1.1"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.75"
axiom-circuit = { version="0.1.0" }
